got urls working with spaces and changed sites to be lowercase (e.g. Shopzilla -> shopzilla)